unidad08/4-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoteles-backend
  namespace: practica8
spec:
  selector:
    app: hoteles-backend
    modulo: reservas
    capa: backend
    version: stable
    tecnologia: python
    ambiente: prod
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
