unidad08/parte_2_ingressHoteles.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pda-hotel-ingress
  namespace: pda-dev
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: awesome-hotels.internal.itrip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: pda-hotel-front-stablev1-srv
             port: 
                number: 80
      - path: /hotels
        pathType: Prefix
        backend:
          service:
             name: pda-hotel-back-stablev1-srv
             port: 
                number: 5000
